--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -7,7 +7,7 @@
                       <h4 class="card-title">{{tableName}}</h4>
                       <p class="card-category"> Populates the list of users</p>
                       <button type="button" class="btn btn-success btn-lg pull-right" (click)="addUser()" [disabled]="showForm">Add User</button>
-                      <app-add-edit-user *ngIf="showForm" [id]="id" (newUserAdded)="onRecieve($event)" [user]="eUser"></app-add-edit-user>
+                      <app-add-edit-user *ngIf="showForm" [id]="id" (newUserAdded)="onRecieve($event)" [user]="user"></app-add-edit-user>
                   </div>
                   <div class="card-body">
                       <div class="table-responsive">
