--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -244,38 +244,18 @@
                       <p class="card-category">New employees on 15th September, 2016</p>
                   </div>
                   <div class="card-body table-responsive">
-                      <table class="table table-hover">
+                    <div></div>
+                       <table class="table table-hover">
                           <thead class="text-warning">
-                              <th>ID</th>
-                              <th>Name</th>
-                              <th>Salary</th>
-                              <th>Country</th>
+                              <th *ngFor="let day of days; index as i">{{day}}</th>
                           </thead>
                           <tbody>
-                              <tr>
-                                  <td>1</td>
-                                  <td>Dakota Rice</td>
-                                  <td>$36,738</td>
-                                  <td>Niger</td>
-                              </tr>
-                              <tr>
-                                  <td>2</td>
-                                  <td>Minerva Hooper</td>
-                                  <td>$23,789</td>
-                                  <td>Curaçao</td>
-                              </tr>
-                              <tr>
-                                  <td>3</td>
-                                  <td>Sage Rodriguez</td>
-                                  <td>$56,142</td>
-                                  <td>Netherlands</td>
-                              </tr>
-                              <tr>
-                                  <td>4</td>
-                                  <td>Philip Chaney</td>
-                                  <td>$38,735</td>
-                                  <td>Korea, South</td>
-                              </tr>
+                            <tr *ngFor="let item of items;">
+                                <td *ngFor="let day of days; index as i">
+                                    <span *ngIf="i === 0">{{item}}</span>
+                                    <span *ngIf="i > 0"><app-select></app-select></span>
+                                </td>
+                            </tr>
                           </tbody>
                       </table>
                   </div>
